--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "sass": "^1.32.7",
+        "sass-loader": "^8.0.2"
+    },
+    "dependencies": {
+        "node-sass": "^4.14.1"
     }
 }
